# SymptaraAI-Project

./: .gitignore  MURPHYBOT_CONTEXT_v3.md  MURPHYBOT_ROADMAP.md  MurphyBot_Architecture.docx  README.md  app1.py  docling_parser.py  llm_qdrant_connection.py  load_primekg.py  mic_test.py  pdf_utils.py  pyproject.toml  qdrant_memory_indexing.py  requirements.txt  test.ipynb  user_input_handler.py
NotImportantFiles/: failed_chunks.jsonl  main.py
backend/: config.py  dependencies.py  main.py  test_integrations.py
backend/routers/: chat.py  (+2 more)
data_pipeline/: embed_books.py  embed_hpo.py  load_primekg.py
docling_output/: Anatomy-and-Physiology-2e-J.-Gordon-Betts-Peter-Desaix-Eddie-Johnson.md  Applied-Human-Anatomy-Michael-F-Nolan-John-P-McNamara-Roanoke.md  Clinical-Semiology-Dorel-S-mpelean-C-lin-Vasile-Vlad.md  Common Sense Labs Blood Lab Demystified.md  Encyclopedia Of Infectious Diseases.md  Epidemiology-Charlotte-Baker.md  Human-Anatomy-and-Physiology-Nega-Assefa-Yosief-Tsige.md  Internal-Medicine-Getachew-Tizazu.md  Medical-Terminology-for-Healthcare-Professions-Andrea-M.-Nelson-Katherine-Greene.md  Pathophysiology-Fuad-Ibrahim-Mengistu-Welday.md  Physical-Diagnosis-Gashaw-Messele-Mensur-Osman-Zeki-Abdurahman.md  Physiology-Part-I-Yekoye-Abebe-Bhardwaj-G.P.-Habtamu-Mekonnen.md  Symptoms to diagnosis .md
frontend_symptara/: package-lock.json
graph_builder/: SETUP_neo4j.md  build_graph.py  graph_schema.py  llm_extractor.py  md_parser.py  neo4j_writer.py
graph_builder_depracated/: ner_layer.py  triage_query.py
symptara-fixed/: index.html  tailwind.config.ts
(+40 files in other folders)
